Add Delete Note btn and resolved Get Started bug

--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -27,6 +27,10 @@
           <span class="fas fa-times"></span>
           <span>Clear Form</span>
         </button>
+        <button type="button" class="btn btn-sm btn-outline-danger delete-btn">
+          <span class="fas fa-times"></span>
+          <span>Delete Note</span>
+        </button>
       </div>
     </nav>
     <div class="container-fluid">
