--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -7,8 +7,13 @@
     <title>Note Taker</title>
     <link rel="shortcut icon" type="image/x-icon" href="./assets/notepad.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
 
   <body>
@@ -26,10 +31,6 @@
         <button type="button" class="btn btn-sm btn-outline-danger clear-btn">
           <span class="fas fa-times"></span>
           <span>Clear Form</span>
-        </button>
-        <button type="button" class="btn btn-sm btn-outline-danger delete-btn">
-          <span class="fas fa-times"></span>
-          <span>Delete Note</span>
         </button>
       </div>
     </nav>
@@ -53,6 +54,11 @@
         </div>
       </div>
     </div>
-    <script src="./assets/js/index.mjs"></script>
+    <!-- client-side JavaScript -->
+    <script src="./assets/js/index.js"></script>
+    <!-- server-side JavaScript -->
+    <script src="/Users/Mac/bootcamp/My-Note-Pad/Develop/server/server.js"></script>
+    <!-- route JavaScript -->
+    <script src="/Users/Mac/bootcamp/My-Note-Pad/Develop/server/routes.js"></script>
   </body>
 </html>
