Update front-end and package.json

--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -54,11 +54,7 @@
         </div>
       </div>
     </div>
-    <!-- client-side JavaScript -->
-    <script src="./assets/js/index.js"></script>
-    <!-- server-side JavaScript -->
-    <script src="/Users/Mac/bootcamp/My-Note-Pad/Develop/server/server.js"></script>
-    <!-- route JavaScript -->
-    <script src="/Users/Mac/bootcamp/My-Note-Pad/Develop/server/routes.js"></script>
+    <!-- JavaScript -->
+    <script src="/Develop/index.js"></script>
   </body>
 </html>
