Reorganize file structure, add client-side JS

--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -18,7 +18,7 @@
 
   <body>
     <nav class="navbar bg-info">
-      <a class="navbar-brand text-light p-3" href="/">Note Taker </a>
+      <a class="navbar-brand text-light p-3" href="/">My Note Pad </a>
       <div class="icons">
         <button type="button" class="btn btn-outline-light btn-sm save-note">
           <span class="fas fa-save"></span>
@@ -55,6 +55,7 @@
       </div>
     </div>
     <!-- JavaScript -->
-    <script src="/Develop/index.js"></script>
+    <script src="./js/client.js"></script>
+    <script src="/server.js"></script>
   </body>
 </html>
