--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -54,8 +54,9 @@
         </div>
       </div>
     </div>
-    <!-- JavaScript -->
-    <script src="./js/client.js"></script>
-    <script src="/server.js"></script>
+    <!-- Client-Side JavaScript -->
+    <script src="./js/script.js"></script>
+     <!-- Server-Side JavaScript -->
+    <script src="/Develop/index.js"></script>
   </body>
 </html>
