--- a/public/notes.html
+++ b/public/notes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Note Taker</title>
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/images/notepad.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/images/notepad.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link
       rel="stylesheet"
@@ -56,7 +56,5 @@
     </div>
     <!-- Client-Side JavaScript -->
     <script src="./js/script.js"></script>
-     <!-- Server-Side JavaScript -->
-    <script src="/index.js"></script>
   </body>
 </html>
